# COMP232

./: .gitignore  README.md
CiLisp/: CMakeLists.txt
CiLisp/ciLispSrc/: ciLisp.c  ciLisp.h  ciLisp.l  ciLisp.y
Lab12Processor/: SampleRun.txt
Lab12Processor/src/: processor.c  processor.h  processor_test.c
Lab3Personnel/: SampleInput.txt  in.txt
Lab3Personnel/src/: list.c  main.c  person.c
Lab4Scanner/: CMakeLists.txt
Lab4Scanner/src/: main.c  scanner.c  scanner.h  scanner_ad_hoc.c
Lab5Scanner2/: CMakeLists.txt  table.txt
Lab5Scanner2/src/: main.c  scanner.h  scanner_transition_table.c
Lab6Parser/: MySampleOutput.txt  input.txt  provided_sample_output.txt
Lab6Parser/src/: eval.c  eval.h  main.c  parser.c  parser.h  scanner_ad_hoc.c
Lab7Flex/: flex_t1in.txt  sampleOutput.txt
Lab7Flex/src/: flex_t1.c  flex_t1.h  flex_t1.l
Lab8_bison_t1/: CMakeLists.txt
Lab8_bison_t1/src/: calc.c  calc.h  calc.l  calc.y  sampleInput.txt
Lab8_bison_t2/src/: ciProlog.c  ciProlog.h  ciProlog.l  ciProlog.y  sampleinput.txt
c_tut/: CMakeLists.txt
c_tut/src/: array.c  calc.c  file.c  hello.c  if-then-else.c  mem-alloc.c  person.c  person.h  pointer.c  struct.c  types.c  words.c
ciLisp/: sampleOutput.txt
